debug overflow issues

--- a/styles/_universal.scss
+++ b/styles/_universal.scss
@@ -2,6 +2,7 @@ html {
   font-family: $mainFont;
   font-size: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
