--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html {
   font-family: "Montserrat";
   font-size: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
